config redis, fix load env, write excel, api checkin and checkout
