# controllers/calendar/response.go
@@ -1,0 +1,7 @@
+package calendar
+
+type MessageResponse struct {
+	Success bool        `json:"success"`
+	Message string      `json:"message"`
+	Data    interface{} `json:"data"`
+}
