# controllers/department/department.go
@@ -3,6 +3,7 @@ package department
 import (
 	errorModels "employee_manage/constant"
 	"employee_manage/models"
+	"employee_manage/services"
 	"errors"
 	"net/http"
 	"strconv"
@@ -176,5 +177,27 @@ func DeleteDepartmentByID(c *gin.Context) {
 	c.JSON(http.StatusOK, MessageResponse{
 		Success: true,
 		Message: "Department deleted successfully",
+	})
+}
+
+func ExportExcel(c *gin.Context) {
+	departmentID, err := strconv.Atoi(c.Param("id"))
+
+	if err != nil {
+		appError := errorModels.NewAppError(errors.New("department id is invalid"), errorModels.ValidationError)
+		c.Error(appError)
+		return
+	}
+
+	users, _ := models.GetUsersByDepartmentID(departmentID)
+
+	if err := services.ExportExcel(strconv.Itoa(departmentID), users); err != nil {
+		c.Error(err)
+		return
+	}
+
+	c.JSON(http.StatusOK, MessageResponse{
+		Success: true,
+		Message: "Export success",
 	})
 }
